--- a/development.ini
+++ b/development.ini
@@ -40,6 +40,13 @@ sqlalchemy.url = sqlite:///%(here)s/development.db
 # execute malicious code after an exception is raised.
 #set debug = false
 
+authkit.setup.enable = true
+authkit.setup.method = form, cookie
+authkit.form.authenticate.user.type = authkit.users.sqlalchemy_driver:UsersFromDatabase
+authkit.form.authenticate.user.data = manage1.model
+authkit.cookie.secret = secret string
+authkit.cookie.signoutpath = /signout
+authkit.form.template.obj = manage1.lib.auth:render_signin
 
 # Logging configuration
 [loggers]
