--- a/development.ini
+++ b/development.ini
@@ -25,6 +25,7 @@ beaker.session.key = manage1
 beaker.session.secret = somesecret
 
 temporary_store = %(here)s/manage1/public/upload/temporary
+email_layout = %(here)s/manage1/templates/layout/email_layout
 
 # If you'd like to fine-tune the individual locations of the cache data dirs
 # for the Cache data, or the Session saves, un-comment the desired settings
